Upgrade from Java 23 to Java 24 and enable compact object headers